2001-01-10  Masatake YAMATO  <yamato@redhat.com>

	* median.c: Appled a patch from Martin.
	(median_cut_rgb): Rid ^M.

2000-12-02  Masatake YAMATO  <yamato@redhat.com>

	Following two changes are suggested 
	by Brian V. Smith <bvsmith@epb1.lbl.gov>.
	
	* input-magick.c (magick_load_image): Invoke
	GetExceptionInfo if MagickLibVersion > 0x500.
	
	* input-tga.c: Include unistd.h.
	
2000-12-01  Masatake YAMATO  <yamato@redhat.com>

	* Merge branch TOWARD_RELEASE_0_26->RELEASE_0_26.

	2000-11-16  Masatake YAMATO  <yamato@redhat.com>

		- configure.in: Version 0.26.

	2000-11-15  Masatake YAMATO  <yamato@redhat.com>

		- pxl-outline.c: Applied a patch from Martin.

2000-11-21  Masatake YAMATO  <yamato@redhat.com>

	* main.c (read_command_line): Use at_color_new.

	* autotrace.[ch] (at_fitting_opts_copy): 
	(at_color_new):
	(at_color_free):
	(at_color_copy): New functions.
		
2000-11-20  Masatake YAMATO  <yamato@redhat.com>

	* HACKING: Write about autofig.
	Write about Library usage.

	* configure.in (AC_OUTPUT): Generate autotrace-config.

	* autotrace-config.af: New file.

	* Makefile.am: Added target for autotrace-config.

	* autotrace.h: Put typedefs here.

	* autotrace.c (at_home_site): New function.

	* Makefile.am (autotraceinclude_HEADERS): Only 
	types.h and autotrace.h are installed.

2000-11-18  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (autotraceinclude_HEADERS): 
	Added image-header.h. 
	(noinst_HEADERS): Added xstd.h, epsilon-equal.h,
	logreport.h, usefull.h, message.h.
	(libautotrace_a_SOURCES): Added quantize.h and
	median.h.

	* (substring.[ch]): Merged into filename.c.

	* (concat3.[ch]): Likewise.

	* xstd.h: xmem.h, xf*.[ch] are unified.

	* filename.[ch]: *-suffi?x and are unified.

2000-11-17  Masatake YAMATO  <yamato@redhat.com>

	Make codes C++-clean. Suggested by 
	Glunz Wolfgang <Wolfgang.Glunz@icn.siemens.de>
	and 
	Reini Urban <rurban@sbox.tu-graz.ac.at>.
	
	* autotrace.h: Added an extern "C". 
